# game-engines-v2

./: CMakeLists.txt  README.md
assets/Scripts/: enemyMove.lua  enemySpawn.lua  sample.lua
include/: print.h
src/: CMakeLists.txt  main.cpp  print.h
src/ECS/: Components.h  Entity.h  System.h
src/Engine/ECS/: Entity.h
src/Engine/Game/: Game.cpp  Game.h
src/Engine/Scene/: Scene.cpp
src/Engine/UI/: Systems.cpp
src/Engine/UI/imgui/: imgui_impl_sdl.cpp
src/Game/: CMakeLists.txt  Game.cpp  Game.h  ScriptingManager.cpp  ScriptingManager.h
src/Game/Graphics/: PixelShader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Tile.h
src/Pong/: Components.h  Pong.cpp  Pong.h  Systems.cpp  Systems.h
src/RPG/: Components.h  RPG.cpp  RPG.h  Systems.cpp  Systems.h
src/Scene/: Scene.cpp  Scene.h
src/UI/: Systems.cpp  Systems.h
src/UI/imgui/: imgui_impl_sdlrenderer.cpp
